@@ -3,6 +3,7 @@ cm4all-beng-proxy (0.7.7) unstable; urgency=low
   * processor: check "type "attribute before URI rewriting
   * http-client: start receiving before request is sent
   * http-client: try to read response after write error
+  * http-client: deliver response body after headers are finished
   * istream-chunked: clear input stream in abort handler
 
  --
